2005-01-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Dialog_Filesystems.cc: Replaced stockitems APPLY and CANCEL with YES and NO.

2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Frame_Resizer_Base.cc: hmmz, i forgot to remove one unnecessary check.

2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/Frame_Resizer_Base.h,
	  include/Frame_Resizer_Extended.h,
	  src/Frame_Resizer_Base.cc,
	  src/Frame_Resizer_Extended.cc: finally got around to fix this annoying 'flickering' while using the resizer :)

2005-01-23 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: write actually used libpartedversion to stdout on startup. (usefull for debugging)

2005-01-22 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/Dialog_Base_Partition.h,
	  src/Dialog_Base_Partition.cc,
	  src/Dialog_Partition_Copy.cc,
	  src/Dialog_Partition_Resize_Move.cc: Fixed bug in copy functionality (due to unset ORIG_START startsector wasn't set correctly). Also have ORIG*
	  initialized in ctor of dialogbase to prevent such errors from ever happening again (this one only showed up with gcc-3.3.5) .

2005-01-19 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: removed sleep( 1 ). This isn't needed anymore now the layout is scanned before the re-readtest. (saves seconds at scantime :) )
	* replaced C-style typeconversion with static_casts throughout the project.

2005-01-18 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/Utils.h: used static_cast<> instead of C-style type conversion.
	* src/Makefile.am: install gparted binary in bin/ instead of sbin/ (as soon as i've time i want to implement a read-only modus)

2005-01-11 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: activate_convert used old filesystem instead of new one for checks. fixed.

2005-01-09 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,