@@ -1,3 +1,9 @@
+2005-01-30 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: Replaced menu "Operations" with "Device" and "Partition". Also implemented a 'set-disklabel feature'.
+	* src/Dialog_Disklabel.cc: changed title and header to be more generic (was specific for a new disk).
+
 2005-01-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Filesystems.cc: Replaced stockitems APPLY and CANCEL with YES and NO.
